--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,14 +3,15 @@
   "editor.cursorBlinking": "solid",
   "editor.fontFamily": "ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono', 'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro', 'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace",
   "editor.fontLigatures": false,
-  "editor.fontSize": 22,
+  "editor.fontWeight": "normal",
+  "editor.fontSize": 12,
   "editor.formatOnPaste": false,
   "editor.formatOnSave": false,
   "editor.lineNumbers": "on",
   "editor.matchBrackets": "always",
   "editor.minimap.enabled": false,
   "editor.smoothScrolling": true,
-  "editor.tabSize": 4,
+  "editor.tabSize": 2,
   "editor.detectIndentation": false,
   "editor.useTabStops": true,
   "editor.autoClosingBrackets": "never",
@@ -19,8 +20,8 @@
   "files.autoSave": "afterDelay",
   "window.commandCenter": false,
   "screencastMode.onlyKeyboardShortcuts": true,
-  "terminal.integrated.fontSize": 18,
-  "workbench.colorTheme": "Visual Studio Dark",
+  "terminal.integrated.fontSize": 13,
+  "workbench.colorTheme": "Default Dark Modern",
   "workbench.fontAliasing": "antialiased",
   "C_Cpp.codeAnalysis.clangTidy.enabled": true,
   "workbench.statusBar.visible": true,
@@ -89,6 +90,20 @@
     "xstring": "cpp",
     "xtr1common": "cpp",
     "xutility": "cpp",
-    "stack": "cpp"
+    "stack": "cpp",
+    "__availability": "cpp",
+    "__bit_reference": "cpp",
+    "__config": "cpp",
+    "__locale": "cpp",
+    "__split_buffer": "cpp",
+    "__threading_support": "cpp",
+    "__verbose_abort": "cpp",
+    "bitset": "cpp",
+    "complex": "cpp",
+    "execution": "cpp",
+    "iomanip": "cpp",
+    "locale": "cpp",
+    "mutex": "cpp",
+    "variant": "cpp"
   }
 }
